@@ -232,7 +232,7 @@ AC_CHECK_DECLS([setjmp], [], [AC_MSG_FAILURE([setjmp is required])], [[#include 
 # Require that we have vsnprintf that conforms to c99. I.e. does bounds check
 AC_CHECK_FUNC([vsnprintf], [], [AC_MSG_FAILURE([vsnprintf is required])])
 
-AC_CHECK_FUNCS([timegm getgrouplist getrandom arc4random_buf])
+AC_CHECK_FUNCS([timegm getgrouplist getrandom arc4random_buf clock_gettime])
 
 # ------------------------------------------------------------------------
 # Architecture/OS
