@@ -6,6 +6,9 @@ Version 5.29.1
 
 Fixed: The disk read/write bytes didn't show up in M/Monit for Monit 5.27.0 or later.
 
+Fixed: Issue #998: Old platforms without clock_gettime() and monotonic clock fail to compile Monit 5.29.0.
+Thanks to Lutz Mader.
+
 
 Version 5.29.0
 
